# coding_utilities

./: .gitignore  CMakeLists.txt  commands.txt
common/: args.cpp  args.h  format.cpp  format.h  printx.hpp
gai/: CMakeLists.txt
gai/src/: gai.cpp  input.cpp  input.h  operation.cpp  operation.h  regex.cpp  regex.h  tests.cpp
queries/: treesitter-tags.txt
sakura/: CMakeLists.txt
sakura/src/: config.cpp  sakura.cpp
src/: config.cpp  config.h  treesitter_tags.cpp
